# lpkg

./: .gitignore  INSTALL  Makefile  README.md  meson.build
notes/: cli-commands  database-structure  package-structure
resources/: lpkg-0.1.0.tar.lz  lpkg-devel-0.1.0.tar.lz  test.tar.lz
resources/lpkg/: manifest  package.ini
resources/lpkg-devel/: manifest  package.ini
src/: meson.build
src/lpkg/: conio.c  conio.h  dbio.c  dbio.h  dbmap.c  dbmap.h  default.h  fileio.c  fileio.h  lpkg.c  lpkg.h  main.c  meson.build  mode.h  mode_dbquery.c  mode_init.c  mode_install.c  mode_remove.c  mode_unimplemented.c  package.c  package.h  stb_ds.c  unpack.c  unpack.h  version.c  version.h
